--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.0"
+    "react-hot-toast": "^2.4.0",
+    "next-auth": "^4.3.3"
+    
   },
   "devDependencies": {
     "@types/node": "^18.14.1",
