--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "next-auth": "^4.3.3",
-    "@next-auth/prisma-adapter": "^1.0.5",
+    "@next-auth/prisma-adapter": "^1.0.5"
 
   },
   "devDependencies": {
