--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - '3000:3000'
     environment:
-      DATABASE_URL: postgresql://postgres:CSz1V2Wei3APNwviHkKI@containers-us-west-92.railway.app:7495/railway
+      DATABASE_URL: postgresql://postgres:ow4ltDbNlmV8NFCUv3qt@containers-us-west-92.railway.app:7495/railway
       GOOGLE_CLIENT_ID: 141592513918-8u29id07fg8acfud9l9pqjcfsqlpbjmp.apps.googleusercontent.com
       GOOGLE_CLIENT_SECRET: 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
       AUTH_SECRET: XSUPERSECRETX23DFADFDAFADFADF
